# loom

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE1_GAPS.md  README.md  install.sh  schema.md
.cargo/: config.toml
.claude/skills/knots-e2e/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
.knots/events/2026/03/19/: 019d0563-e2b6-76f1-846b-74a484dfc655-knot.created.json  019d0563-e4ec-7a51-a5d3-3e1a8e052cc5-knot.priority_set.json  019d0564-78f1-7362-864c-4317d0b9f7ac-knot.state_set.json  019d0567-391e-7e82-b1b8-12c3556c7b0c-knot.note_added.json  019d0567-5d8b-7eb2-9513-58744cc0a0f4-knot.handoff_capsule_added.json  019d0567-7844-7b33-9940-c3be2a3b7a03-knot.state_set.json  019d0567-dc05-7dc1-8776-52ef66daac84-knot.state_set.json  019d0569-4669-7bb3-8f1e-1b999c600f3e-knot.state_set.json  019d0569-4669-7bb3-8f1e-1bb1ceed9db6-knot.note_added.json  019d0569-4669-7bb3-8f1e-1bd1bfb8bbb6-knot.handoff_capsule_added.json  019d0569-92f3-79f0-9e04-1ca525e33317-knot.state_set.json  019d056b-0c7b-7a60-b944-cacef523dc32-knot.note_added.json  019d056b-0e7b-7393-8b7d-9a6086413732-knot.handoff_capsule_added.json  019d056b-130d-79c0-a5ac-2ee6fff4e84b-knot.state_set.json  (+45 more)
crates/loom-cli/: Cargo.toml
crates/loom-cli/src/: main.rs  templates.rs
crates/loom-cli/src/commands/: build.rs  compat.rs  completions.rs  diff.rs  doctor.rs  graph.rs  init.rs  install_paths.rs  mod.rs  sim.rs  template.rs  uninstall.rs  update.rs  validate.rs
crates/loom-cli/tests/: cli_integration.rs  getting_started_integration.rs  uninstall_integration.rs  update_integration.rs
crates/loom-cli/tests/common/: mod.rs
crates/loom-core/: Cargo.toml
crates/loom-core/src/: compat.rs  config.rs  diff.rs  error.rs  grammar.pest  lib.rs  sim.rs
crates/loom-core/src/codegen/: go.rs  knots_bundle.rs  mod.rs  python.rs  rust.rs  toml_emit.rs
crates/loom-core/src/graph/: mod.rs  profile.rs  render.rs  validate.rs
crates/loom-core/src/ir/: lower.rs  mod.rs
crates/loom-core/src/parse/: ast.rs  mod.rs
crates/loom-core/src/prompt/: mod.rs
docs/: configure-and-install-a-custom-knots-workflow.md  getting-started.md  how-to-prompt-an-agent-to-build-a-workflow.md  releasing.md  under-the-hood-knots-and-loom.md
docs/internal/: FEATURE_COMPLETE_GAPS.md  PHASE_7-11.md
scripts/release/: channel-install.sh  channel-use.sh  smoke-install.sh
templates/knots_sdlc/: loom.toml  workflow.loom
templates/knots_sdlc/profiles/: autopilot.loom  autopilot_with_pr.loom  autopilot_with_pr_no_planning.loom  semiauto.loom  semiauto_no_planning.loom
templates/knots_sdlc/prompts/: implementation.md  implementation_review.md  shipment.md
tests/fixtures/knots_sdlc/: workflow.loom
tests/fixtures/knots_sdlc/profiles/: autopilot_no_planning.loom  autopilot_with_pr.loom
tests/fixtures/knots_sdlc/prompts/: plan_review.md  planning.md  shipment.md  shipment_review.md
tests/fixtures/knots_sdlc_v2/: loom.toml  workflow.loom
tests/fixtures/knots_sdlc_v2/profiles/: semiauto.loom  semiauto_no_planning.loom
tests/fixtures/knots_sdlc_v2/prompts/: implementation.md  implementation_review.md  plan_review.md  planning.md  shipment.md
(+631 files in other folders)
