[workspace]
members = ["crates/loom-core", "crates/loom-cli"]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/acartine/loom"
homepage = "https://github.com/acartine/loom"

[workspace.dependencies]
loom-core = { path = "crates/loom-core" }
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
petgraph = "0.6"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
regex = "1"
serde_json = "1"
