[package]
name = "loom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for compiling Loom workflows into validated typed code"
readme = "../../README.md"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
loom-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
semver = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"

[dev-dependencies]
serde_json = { workspace = true }
flate2 = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
