[package]
name = "loom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core parser, validator, graph analysis, and code generation for Loom workflows"
readme = "../../README.md"

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
petgraph = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
